spacing fixed

--- a/components/Nav.module.css
+++ b/components/Nav.module.css
@@ -32,27 +32,38 @@
   color: #FEC005 !important;
 }
 
-.category{
+button.list, button.list__2{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+button.list__2{
+  color: white;
+}
+
+button.list:hover{
+  color: #32C569;
+}
+
+button.list__2:hover{
+  color: #32C569 !important;
+}
+
+.category, .category__2__ul{
   display: flex;
   flex-direction: column;
   list-style-type: none;
   margin: 5vh 0;
 }
 
-.category li{
+.category li, .category__2__ul li{
   margin: 2vh 0;
   font-weight: 100;
+}
+
+.category li{
   opacity: 0.5;
-}
-
-.category a{
-  text-decoration: none;
-  width: fit-content;
-  display: flex;
-}
-
-.category li:hover{
-  color: #32C569;
 }
 
 .body h1{
@@ -121,22 +132,7 @@
     transition: 0.3s;
   }
 
-  .list__2 li{
-    color: white !important;
-  }
-
   .category__2 svg, .category__2 a{
     padding: 20px;
-  }
-
-  .list__2{
-    text-decoration: none;
-  }
-
-  .category__2__ul{
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
   }
 }
