--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,7 @@
-.body *{
+/* .body p{
   margin: 0;
   padding: 0;
-}
+} */
 
 .body{
   display: flex;
